<resources>
    <string name="app_name">CourseScheduler</string>
    <string name="openSchedule">Open Schedule Page</string>
    <string name="addSchedule">Add Schedule</string>
    <string name="deleteSchedule">Delete Schedule</string>
    <string name="updateStudent">Update Student</string>
    <string name="registerStudent">Register Student</string>
    <string name="backToLogin">Back To Login</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="addCourse">Add Course</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="register">Register</string>
    <string name="deleteStudent">Delete Student</string>
    <string name="previous">Previous</string>
    <string name="course_name">Course Name</string>
    <string name="student_name">Student Name</string>
    <string name="click_to_go_to_previous_window">Click to go to Previous Window</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
...
