...
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ListView
        android:id="@+id/scheduleList_schedule"
        android:layout_width="368dp"
        android:layout_height="243dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
...
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/courseID_schedule"
        android:layout_width="114dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toTopOf="@+id/addCourseBtn_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleList_schedule"
        app:layout_constraintVertical_bias="0.251"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/courseName_schedule"
        android:layout_width="194dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteCourseBtn_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleList_schedule"
        app:layout_constraintVertical_bias="0.202"
        tools:ignore="MissingConstraints" />
...
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <Button
        android:id="@+id/addScheduleBtn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addSchedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <Button
        android:id="@+id/deleteScheduleBtn_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteSchedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <Button
        android:id="@+id/backToLogin_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
...
